[gd_scene load_steps=11 format=3 uid="uid://cc4mrtovbxr02"]

[ext_resource type="Script" path="res://scripts/enemy/enemy.gd" id="1_ci4l5"]
[ext_resource type="Texture2D" uid="uid://cgyhwoynem0pi" path="res://assets/enemies/normal.png" id="2_asf6w"]
[ext_resource type="Script" path="res://scripts/state_machine/state_machine.gd" id="5_bov32"]
[ext_resource type="Script" path="res://scripts/enemy/spawning.gd" id="6_jnlrs"]
[ext_resource type="Script" path="res://scripts/enemy/wander.gd" id="7_t0xx3"]
[ext_resource type="Script" path="res://scripts/enemy/chase.gd" id="8_yl4us"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vh5ks"]
size = Vector2(50, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bubcr"]
size = Vector2(57, 57)

[sub_resource type="CircleShape2D" id="CircleShape2D_yhlub"]
radius = 461.001

[sub_resource type="LabelSettings" id="LabelSettings_tvssc"]
font_color = Color(0, 0, 0, 1)

[node name="NormalEnemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource("1_ci4l5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_asf6w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vh5ks")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_bubcr")

[node name="VisionArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea"]
shape = SubResource("CircleShape2D_yhlub")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("5_bov32")
initial_state = NodePath("Spawning")

[node name="Spawning" type="Node" parent="StateMachine"]
script = ExtResource("6_jnlrs")

[node name="Wander" type="Node" parent="StateMachine"]
script = ExtResource("7_t0xx3")

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource("8_yl4us")

[node name="PersistTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DebugLabel" type="Label" parent="."]
offset_left = -121.0
offset_top = -69.0
offset_right = 121.0
offset_bottom = -43.0
text = "Current state"
label_settings = SubResource("LabelSettings_tvssc")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="VisionArea" to="." method="_on_vision_area_body_entered"]
[connection signal="body_exited" from="VisionArea" to="." method="_on_vision_area_body_exited"]
[connection signal="timeout" from="PersistTimer" to="." method="_on_persist_timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="StateMachine/Spawning" method="_on_spawn_timer_timeout"]
